# lensify

./: LICENSE  README.md  example_usage.md  requirements.txt  setup.cfg  setup.py
lensify/: __init__.py  cli.py
lensify.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
test_docs/: .lensify_index.json  coding_tips.txt  deep_learning.txt  payment_notes.txt  startup_ideas.md
