[metadata]
name = lensify
version = 0.2.0
author = Siddhant Gangawane
author_email = siddhantgangawane335@gmail.com
description = Local semantic search engine (lensify)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/wakeups1dd/lensify
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires =
    sentence-transformers; extra == "embeddings"
    numpy
    faiss-cpu
    PyPDF2
    scikit-learn
    nltk
    tqdm

[options.package_data]
* = *.txt, *.md
